# tracking-challenge-demo

./: setup.cfg  tox.ini
src/tracking_challenge_demo/: napari.yaml
src/tracking_challenge_demo/_tests/: test_reader.py  test_widget.py  test_writer.py
